--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "homepage": "https://github.com/Ollebolle/fastify-react#README",
   "dependencies": {
-    "fastify": "^0.38.0"
+    "fastify": "^0.38.0",
+    "fastify-static": "^0.6.0"
   }
 }
