--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack -p",
+    "start": "cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server -d",
+    "build": "cross-env NODE_ENV=production webpack -p --progress",
     "lint": "./node_modules/.bin/eslint ./src/*.jsx ./src/**/*.jsx"
   },
   "keywords": [],
@@ -33,6 +33,7 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.10.0",
+    "webpack-dashboard": "^1.0.2",
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
