Use nodemon locally to run server

--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node_modules/.bin/nodemon index.js"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:Ollebolle/fastify-react.git"
   },
   "author": "Ollebolle",
-  "license": "ISC",
+  "license": "MIT",
   "homepage": "https://github.com/Ollebolle/fastify-react#README",
   "dependencies": {
-    "fastify": "^0.38.0",
-    "fastify-static": "^0.6.0"
+    "fastify": "0.38.0",
+    "fastify-static": "0.6.0",
+    "nodemon": "1.14.11"
   }
 }
