--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
     "lint": "./node_modules/.bin/eslint ./src/*.jsx ./src/**/*.jsx"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Olle Svensson",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
@@ -41,7 +41,6 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
-    "react-leaflet": "^1.7.8",
     "react-router-dom": "^4.2.2"
   }
 }
